--- a/style.css
+++ b/style.css
@@ -1,3 +1,9 @@
+:root {
+  --spacing: 10px;
+  --blur: 10px;
+  --base-color: #ffc600;
+}
+
 body {
   text-align: center;
   background: #193549;
@@ -7,10 +13,20 @@ body {
   font-size: 50px;
 }
 
+.hl {
+  color: var(--base-color);
+}
+
 .controls {
   margin-bottom: 50px;
 }
 
 input {
   width: 100px;
+}
+
+.image {
+  padding: var(--spacing);
+  filter: blur(var(--blur));
+  background-color: var(--base-color);
 }
